--- a/src/components/CtaSection/CtaSection.css
+++ b/src/components/CtaSection/CtaSection.css
@@ -1,7 +1,7 @@
 /* src/components/services/CtaSection.css */
 
 .final-cta {
-  background-color: #FDFCF8; /* Fond beige */
+  background-color: #FDFCF8;
   padding: 100px 20px;
   text-align: center;
 }
