--- a/src/components/ProcessSection/ProcessSection.css
+++ b/src/components/ProcessSection/ProcessSection.css
@@ -27,7 +27,7 @@
 .step-number {
   font-family: "Playfair Display", Georgia, serif;
   font-size: 4rem;
-  color: #EAEAEA;
+  color: #031fd0;
   font-weight: 700;
   display: block;
   margin-bottom: 10px;
